showroom.css
#model-container {
    width: 85vw;
    height: 35vw;
    margin: 1.5rem auto;
}

#model-container canvas {
    overflow: hidden;
    border-radius: 20px;
}

.hidden {
    display: none !important;
}

body {
    background: linear-gradient(90deg, rgba(51,51,51,1) 9%, rgba(87,85,92,1) 42%, rgba(165,158,181,1) 100%);
}

@media (max-width: 567px) {
    body #model-container {
        height: 55vh;
    }
}

